Fix carousel not showing full list and fix pagination on categories page

--- a/gatsby-theme/src/styles/card.scss
+++ b/gatsby-theme/src/styles/card.scss
@@ -16,7 +16,7 @@
         }
     }
 
-    @media(min-width: 992px){
+    @media(min-width: 768px){
         margin-right: 30px;
     }
     
